--- a/src/main/resources/lable_en.properties
+++ b/src/main/resources/lable_en.properties
@@ -14,7 +14,7 @@ label.remember_me = Remember me
 label.sign_in = Sign in
 label.please_sign_in = Please sign in
 label.please_register = Please register
-label.welcome = Welcome to JTutor
+label.welcome_en = Welcome to JTutor
 label.create_or_update_quests = Create/Update Quests
 label.create_or_update_lectures = Create/Update Lectures
 label.logged_in_as = Logged in as
