--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -39,3 +39,7 @@ valid_answers_count = Valid answers count
 answers_count = Answers count
 answers = Answers
 valid = Valid
+error = Error
+not_all_questions = Sorry, you've not answered all questions.
+answer_form = Answer Form
+question_form = Question Form
