--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -43,3 +43,21 @@ error = Error
 not_all_questions = Sorry, you've not answered all questions.
 answer_form = Answer Form
 question_form = Question Form
+finish = Finish
+at_least_one_answer = Please, choose at least 1 answer!
+result = Result
+results = Results
+correct_answers = Correct answers
+resend_activation = Re-send Activation
+send_activation = Re-send Activation
+activation_was_sent = Activation was just sent to your inbox.
+please_check_your_email_for_activation = Please check your email for instructions on how to activate your account.
+reset_link_was_sent = Password reset link was just sent to your inbox.
+please_check_your_email_for_reset = Please check your email for instructions on how to reset your your password.
+changes_had_been_saved = Your changes have been saved
+login = Login
+email_and_password_are_incorrect = Email and password is incorrect or your account is not activated, please try again.
+permission_denied = Permission Denied
+you_do_not_have_access = You do not have access to this section of the website.
+registration_was_successful = Registration was successful, please activate your account by checking your inbox &amp; spam.
+please_enter_your_new_password = Please enter your new desired password.
