--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,7 +13,7 @@ remember_me = Remember me
 sign_in = Sign in
 please_sign_in = Please sign in
 please_register = Please register
-welcome = Welcome to JTutor
+welcome = Welcome to JTutor!
 create_or_update_quests = Create/Update Quests
 create_or_update_lectures = Create/Update Lectures
 logged_in_as = Logged in as
