--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -64,3 +64,4 @@ please_enter_your_new_password = Please enter your new desired password.
 or = or
 ukrainian = Ukrainian
 english = English
+search = Search
