--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -64,3 +64,4 @@ please_enter_your_new_password = \u0411\u0443\u0434\u044C \u043B\u0430\u0441\u04
 or = \u0430\u0431\u043E
 ukrainian = \u0423\u043A\u0440\u0430\u0457\u043D\u0441\u044C\u043A\u0430
 english = \u0410\u043D\u0433\u043B\u0456\u0439\u0441\u044C\u043A\u0430
+search = \u041F\u043E\u0448\u0443\u043A
