--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -65,3 +65,10 @@ or = or
 ukrainian = Ukrainian
 english = English
 search = Search
+forum = Forum
+new_forum_question = Ask Question
+edit_forum_question = Edit Question
+asked = asked
+answered = answered
+close_question = Close question
+answer = Answer
