--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -72,3 +72,8 @@ asked = asked
 answered = answered
 close_question = Close question
 answer = Answer
+error.alreadyExists = This username or email already exists.
+error.email.doesntExist = We could not find this email in our database.
+error.activation.doesntExist = We could not find this reset password request.
+error.password.couldntBeChanged = Password could not be changed.
+fill_out_this_field = Please, fill out this field.
